Random Forest/DNA/MICROSET_PRUEBA/ERROR_OUTPUT/pyrandom_forgraph_output.477983.out
  File "RandomForest_addhist_logimp.py", line 322
    plt.savefig(histlabelspng,, format='png', dpi=300, bbox_inches='tight')   #------------------------- // NUEVO \\ --------------------------#
                              ^
SyntaxError: invalid syntax
